# AudioPlayer

./: CMakeLists.txt  CMakeLists.txt.user.ec7a1f4  ReadMe.md  ffmpeg_utils.cpp  ffmpeg_utils.h  logo.rc  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
